--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://listblog.github.io/What-Essential-Oils-Get-Rid-of-Flies-Discover-5-Effective-Natural-Solutions/">https://listblog.github.io/What-Essential-Oils-Get-Rid-of-Flies-Discover-5-Effective-Natural-Solutions/</a><br>
+                <a target="_bLank" href="https://rockymountainoils.s3.us-east-005.backblazeb2.com/What+Essential+Oils+Get+Rid+of+Flies%3F+Discover+5+Effective+Natural+Solutions/index.html">https://rockymountainoils.s3.us-east-005.backblazeb2.com/What+Essential+Oils+Get+Rid+of+Flies%3F+Discover+5+Effective+Natural+Solutions/index.html</a><br>
+                <a target="_bLank" href="https://what-essential-oils-get-rid-git-e53fd2-birchs-projects-9248c938.vercel.app/">https://what-essential-oils-get-rid-git-e53fd2-birchs-projects-9248c938.vercel.app/</a><br>
+                <a target="_bLank" href="https://remarkable-sherbet-4d2b93.netlify.app/">https://remarkable-sherbet-4d2b93.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
